fix some layout issue

--- a/src/assets/style/_function.scss
+++ b/src/assets/style/_function.scss
@@ -43,8 +43,8 @@ $z-index: (
 	toggle-theme: 7,
 	search-results: 7,
 	sidebar: 6,
-  aside: 4,
-	master-container: 2,
+	master-container: 6,
+	aside: 4,
 	search-component: 1,
 );
 
